[package]
name = "network_config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
ifstructs = "0.1.1"
anyhow = "1.0.52"
libc = "0.2"
structopt = "0.3"
log = "0.4.14"
simple_logger = "1.16.0"